--- a/Tp-Final-labo4/src/app/Components/top-bar/top-bar.html
+++ b/Tp-Final-labo4/src/app/Components/top-bar/top-bar.html
@@ -16,7 +16,9 @@
         class="search-input"
         id="search"
         [formControl]="busqueda"
-        placeholder="Buscar película" />
+        placeholder="Buscar película"
+        (keyup.enter)="buscar()"  
+        />
 
       <button
         class="search-btn"
