--- a/Tp-Final-labo4/src/app/Components/login/login.html
+++ b/Tp-Final-labo4/src/app/Components/login/login.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" (ngSubmit)="onLogin()" class="login-form">
+<form [formGroup]="form" (submit)="onLogin($event)" class="login-form">
   <fieldset>
     <legend>Iniciar Sesión</legend>
 
