--- a/Tp-Final-labo4/src/app/Shared/footer/footer.html
+++ b/Tp-Final-labo4/src/app/Shared/footer/footer.html
@@ -1,8 +1,18 @@
 <footer class="footer">
 
-<p class="mision">
- <strong>"Nuestra misión es ofrecer una experiencia clara, accesible y organizada para gestionar información de películas, facilitando el acceso y la administración  digital."</strong> 
-</p>
-  <p class="devs">Stejskal, Sofía - Valdez, David - Zoppi Carolina -  Martinez, Mauricio - Moyano, María Fernanda </p>
-<p>© 2025. Todos los derechos reservados.</p>
+  <p class="mision">
+    <strong>
+      “MovieHub nació para ofrecer una plataforma clara, accesible y organizada
+      para descubrir, calificar y administrar información de películas.”
+    </strong>
+  </p>
+
+  <p class="devs">
+    Stejskal, Sofía – Valdez, David – Zoppi Carolina – Martínez, Mauricio – Moyano, María Fernanda
+  </p>
+
+  <p class="copy">
+    © 2025 · Proyecto académico UTN · Todos los derechos reservados.
+  </p>
+
 </footer>
