--- a/Tp-Final-labo4/src/app/Components/signup/signup.html
+++ b/Tp-Final-labo4/src/app/Components/signup/signup.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" (ngSubmit)="onSignup()" class="signup-form">
+<form [formGroup]="form" (submit)="onSignup($event)" class="signup-form">
 
   <!-- Mensajes globales -->
   @if (signupError) {
@@ -14,6 +14,7 @@
   }
 
   <div class="form-row">
+
     <!-- Usuario -->
     <div class="form-field">
       <label for="username">Usuario</label>
@@ -65,6 +66,7 @@
   </div>
 
   <div class="form-row">
+
     <!-- Fecha de nacimiento -->
     <div class="form-field">
       <label for="date">Fecha de nacimiento</label>
@@ -144,4 +146,5 @@
   <button type="submit" [disabled]="form.invalid">
     {{ isEditMode ? 'Guardar cambios' : 'Crear usuario' }}
   </button>
+
 </form>
